[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis"
version = "0.0.1"
requires-python = ">=3.9"
description = "A package designed by PyFi to show finance professionals the value of Python."
dependencies = ["dotmap>=1.3.30", "ipykernel>=6.29", "ipywidgets>=8.1", "matplotlib>=3.2", "openai>=1", "pandas>=2.1", "pydantic>=2", "pytest>=9.0", "tqdm>=4"]    # Neither ipykernel nor pytest are strict dependencies of this package. I am including them here to automate installation for students (who will always run the package with a notebook and may run the test suite with Pytest).

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["quick: test all run components before label"]